# hwb

./: TODO  default.nix  hwb.cabal
examples/fmap/: Main.hs
examples/rejuvyesh/: Main.hs
nix/: default.nix  paths.nix
src/: Main.hs
src/Graphics/UI/Gtk/Abstract/Widget/: Concrete.hs
src/Graphics/UI/Gtk/WebKit/WebSettings/: Concrete.hs
src/Graphics/UI/Gtk/WebKit/WebView/: Concrete.hs
src/Graphics/UI/Gtk/Windows/Window/: Concrete.hs
src/HWB/: Core.hs  Main.hs  UserInterface.hs
src/HWB/Plugin/: Clipboard.hs  HTTPSEverywhere.hs  Keybinding.hs  Navigation.hs  Scrolling.hs  WindowTitle.hs
src/HWB/Plugin/Utilities/: ExtensibleState.hs
