name:                hwb
version:             0.0.1
synopsis:            haskell web browser
homepage:            https://github.com/fmap/hwb
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hwb
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       errors >= 1.4 && <1.5,
                       glib >=0.13 && <0.14,
                       gtk >=0.13 && <0.14,
                       https-everywhere-rules >= 0.1 && <0.2,
                       network-uri >= 2.6 && <2.7,
                       stm >= 2.4 && <2.5,
                       transformers >= 0.3 && <0.4,
                       webkit >=0.13 && <0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
